About image alignment corrected

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ header h1 {
 
 #about {
     background-image: url('../img/about-photo.png');
+    background-position: center;
     background-repeat: no-repeat;
 }
 
